<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorMovieBack">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pic_movie_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/pic_movie_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenShift"
            android:layout_marginTop="@dimen/dimenArrowBackTop"
            android:text="@string/arrow"
            android:textColor="@color/colorSmallText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenShiftBtwObjects"
            android:layout_marginTop="@dimen/dimenArrowBackTop"
            android:text="@string/back"
            android:textColor="@color/colorSmallText"
            android:textSize="@dimen/dimenSmallSize"
            app:layout_constraintStart_toEndOf="@id/arrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenShift"
            android:layout_marginBottom="@dimen/dimenRatingMarginBottom"
            android:text="@string/rating"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimenSmallSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pic_movie_back"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nameMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimenShift"
            android:layout_marginTop="@dimen/dimenTitleTop"
            android:text="@string/avengers_n_end_game"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/dimenTextTitle"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/genreMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimenShift"
            android:layout_marginBottom="@dimen/dimenShiftBtwObjects"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/colorDescriptionGenre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameMovie" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenShift"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:src="@mipmap/pic_red_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genreMovie"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:src="@mipmap/pic_red_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toBottomOf="@+id/genreMovie"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:src="@mipmap/pic_red_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toBottomOf="@+id/genreMovie"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:src="@mipmap/pic_red_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toBottomOf="@+id/genreMovie"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:src="@mipmap/pic_grey_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/count_review"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toBottomOf="@+id/genreMovie"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/count_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:text="@string/count_reviews"
            android:textColor="@color/colorSmallText"
            android:textSize="@dimen/dimenSmallSize"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star5"
            app:layout_constraintTop_toBottomOf="@+id/genreMovie" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimenShift"
            android:layout_marginTop="@dimen/dimenShiftBig"
            android:text="@string/storyline"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/dimenTextSize"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/star1" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimenShift"
            android:layout_marginTop="@dimen/dimenShiftBig"
            android:text="@string/after_the_devastating"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimenTextSize"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimenShift"
            android:layout_marginTop="@dimen/dimenShiftBig"
            android:text="@string/cast"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/dimenTextSize"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <ImageView
            android:id="@+id/first_actor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimenShift"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:src="@mipmap/pic_actor_1"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/second_actor"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/first_actor_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenShift"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:layout_marginBottom="@dimen/dimenBottomSpace"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/colorCastName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/first_actor"
            app:layout_constraintEnd_toStartOf="@+id/second_actor_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_actor" />

        <ImageView
            android:id="@+id/second_actor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimenShiftBtwObjects"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:src="@mipmap/pic_actor_2"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/third_actor"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/first_actor"
            app:layout_constraintTop_toBottomOf="@id/cast"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/second_actor_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenShiftBtwObjects"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:layout_marginBottom="@dimen/dimenBottomSpace"
            android:text="@string/chris_evans"
            android:textColor="@color/colorCastName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/first_actor"
            app:layout_constraintEnd_toStartOf="@+id/third_actor_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/first_actor_text"
            app:layout_constraintTop_toBottomOf="@id/first_actor" />

        <ImageView
            android:id="@+id/third_actor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimenShiftBtwObjects"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:src="@mipmap/pic_actor_3"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/forth_actor"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/second_actor"
            app:layout_constraintTop_toBottomOf="@id/cast"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/third_actor_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenShiftBtwObjects"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:layout_marginBottom="@dimen/dimenBottomSpace"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/colorCastName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/first_actor"
            app:layout_constraintEnd_toStartOf="@+id/forth_actor_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/second_actor_text"
            app:layout_constraintTop_toBottomOf="@id/first_actor" />

        <ImageView
            android:id="@+id/forth_actor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimenShiftBtwObjects"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:layout_marginEnd="@dimen/dimenShift"
            android:src="@mipmap/pic_actor_4"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/third_actor"
            app:layout_constraintTop_toBottomOf="@id/cast"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/forth_actor_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenShiftBtwObjects"
            android:layout_marginTop="@dimen/dimenShiftBtwObjects"
            android:layout_marginEnd="@dimen/dimenShift"
            android:layout_marginBottom="@dimen/dimenBottomSpace"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/colorCastName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/third_actor_text"
            app:layout_constraintTop_toBottomOf="@id/first_actor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>