<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/movie_back">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pic_movie_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/pic_movie_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/spacing_14x"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <View
                android:id="@+id/arrow"
                android:layout_width="@dimen/arrow_size"
                android:layout_height="@dimen/arrow_size"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/small_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_2x"
                android:text="@string/back"
                android:textColor="@color/small_text"
                android:textSize="@dimen/text_size_body"
                app:layout_constraintStart_toEndOf="@id/arrow"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4x"
            android:layout_marginBottom="@dimen/spacing_14x"
            android:text="@string/movie_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pic_movie_back"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/title_top"
            android:text="@string/avengers_n_end_game"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/genre_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_4x"
            android:layout_marginBottom="@dimen/spacing_2x"
            android:text="@string/action_adventure_fantasy"
            android:textSize="@dimen/text_size_sub_title"
            android:textColor="@color/description_genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_movie" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:src="@drawable/pic_grey_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre_movie"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_2x"
            android:src="@drawable/pic_grey_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toBottomOf="@+id/genre_movie"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_2x"
            android:src="@drawable/pic_grey_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toBottomOf="@+id/genre_movie"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_2x"
            android:src="@drawable/pic_grey_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toBottomOf="@+id/genre_movie"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_2x"
            android:src="@drawable/pic_grey_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/count_review"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toBottomOf="@+id/genre_movie"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/count_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1x"
            android:text="@string/movie_count_reviews"
            android:textColor="@color/small_text"
            android:textSize="@dimen/text_size_sub_title"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star5"
            app:layout_constraintTop_toBottomOf="@+id/genre_movie" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/spacing_7x"
            android:text="@string/storyline"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_size_sub_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/star1" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/spacing_7x"
            android:text="@string/after_the_devastating"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_sub_title"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_4x"
            android:layout_marginTop="@dimen/spacing_7x"
            android:text="@string/cast"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_size_sub_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_actor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_4x"
            app:layout_constraintTop_toBottomOf="@id/cast"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>